# TGD

./: LICENSE  README.md  pyproject.toml
demos/kernels/: DifferentKernels1D.ipynb  Kernels1D.ipynb  Kernels2D.ipynb
src/TGD/: __init__.py  functions.py  kernel.py  utils.py
