[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TGD"
version = "0.9.0"
authors = [
    {name="Ruiyang Liu",email="cuijm22@126.com"},
]
description = "Implication Code for Tao General Differential and Difference Theory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/THU-CVlab/TGD"